fix layout gap issues

--- a/src/Components/CollectionItem/collectionItem.module.scss
+++ b/src/Components/CollectionItem/collectionItem.module.scss
@@ -1,7 +1,7 @@
 .itemContainer {
   background-color: white;
   padding: 16px;
-  margin: 8px;
+  
   display: flex;
   justify-content: center;
   align-items: center;
