--- a/src/Pages/Collection/collection.module.scss
+++ b/src/Pages/Collection/collection.module.scss
@@ -10,7 +10,7 @@
   text-transform: capitalize;
   text-align: center;
   background-color: white;
-  margin: 16px 20px 0 20px;
+  margin: 5px 5px 0 5px;
   padding: 16px;
   border-radius: 8px;
 }
