--- a/src/Pages/Shop/shop.module.scss
+++ b/src/Pages/Shop/shop.module.scss
@@ -3,7 +3,7 @@
  flex-direction: column;
  height: 100%;
  width: 100%;
- gap: 100px;
+ gap:0;
  background: linear-gradient(to left , rgb(255, 176, 176) , rgb(176, 176, 230));
  flex-wrap: wrap;
 }
